# fastapi-practice

./: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml
src/: main.py
